Modyfing the release script to reflect the changes made to the load balancer
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3113 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -42,8 +42,8 @@
 			
 		<!-- The Sip Load Balancer -->
 		<mkdir dir="${base.path}/jboss-${jboss.version}/sip-balancer"/>
-		<get src="http://repository.jboss.org/maven2/org/mobicents/tools/sip-balancer/1.0.BETA1/sip-balancer-1.0.BETA1-jar-with-dependencies.jar" 
-		    dest="${base.path}/jboss-${jboss.version}/sip-balancer/sip-balancer-1.0.BETA1-jar-with-dependencies.jar" 
+		<get src="http://snapshots.jboss.org/maven2/org/mobicents/tools/sip-balancer/1.0-SNAPSHOT/sip-balancer-1.0-20081009.142921-22-jar-with-dependencies.jar" 
+		    dest="${base.path}/jboss-${jboss.version}/sip-balancer/sip-balancer-1.0-20081009.142921-22-jar-with-dependencies.jar" 
 		    verbose="true"
 		    usetimestamp="true"/>
 		<get src="http://mobicents.googlecode.com/svn/trunk/tools/sip-balancer/src/test/resources/lb-configuration.properties" 
