moving to parent version 6-SNAPSHOT to get jsip ri version 1.2.85
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3169 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
         <artifactId>mobicents</artifactId>
         <groupId>org.mobicents</groupId>
-        <version>6-SNAPSHOT</version>
+        <version>6</version>
     </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-bootstrap</artifactId>
