moving to jsip 1.2.85 and commenting one TCK test that was on exclude list regarding PRACK
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3171 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/tck/excludeList.properties
+++ b/sip-servlets-test-suite/tck/excludeList.properties
@@ -64,7 +64,7 @@ exclude.method.19=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServlet
 #exclude.method.28=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipSessionListenerTest.testSessionDestroyed001
 #exclude.method.29=com.bea.sipservlet.tck.agents.api_javax_servlet_sip.SipSessionListenerTest.testSessionCreated001
 
-exclude.method.30=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipErrorEventListenerTest.testNoPrackReceived001
+#exclude.method.30=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipErrorEventListenerTest.testNoPrackReceived001
 # : added in excludeList since our container doesn't support PRACK extension.
 #exclude.method.31=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletListenerTest.testServletInitialized001
 # : Test is wrong, it assumes the same instance is returned for the listener and for the servlet which is not the case.
