Non Regression Test for Issue 411
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3207 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/.classpath
+++ b/sip-servlets-test-suite/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output="applications/simple-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/simple-sip-servlet/src/main/java"/>
+	<classpathentry kind="src" output="applications/appkey-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/appkey-sip-servlet/src/main/java"/>
 	<classpathentry kind="src" output="applications/shootme-sip-servlet-auth/src/main/sipapp/WEB-INF/classes" path="applications/shootme-sip-servlet-auth/src/main/java"/>
 	<classpathentry kind="src" output="applications/shootist-sip-servlet-auth/src/main/sipapp/WEB-INF/classes" path="applications/shootist-sip-servlet-auth/src/main/java"/>
 	<classpathentry kind="src" output="applications/refer-sip-servlet/src/main/sipapp/WEB-INF/classes" path="applications/refer-sip-servlet/src/main/java"/>
