Non Regression Test for Issue 411
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3208 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -12,6 +12,7 @@
 		<module>simple-sip-servlet</module>
 		<module>shootme-sip-servlet-auth</module>
 		<module>shootist-sip-servlet</module>
+		<module>appkey-sip-servlet</module>
 		<module>shootist-sip-servlet-auth</module>
 		<module>proxy-sip-servlet</module>		
 		<module>b2bua-sip-servlet</module>		
