adding distributable proxy app to the list of examples
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3209 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -19,6 +19,7 @@
 		<module>click-to-call</module>
 		<module>facebook-c2c</module>
 		<module>location-service</module>
+		<module>location-service-distributable</module>
 		<module>media-playback-servlet</module>
 		<module>shopping-demo</module>
 		<module>simple-sip-servlet</module>
