updating examples to MMS CR1
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3292 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -30,7 +30,7 @@
 
 	<properties>
 		<!-- MOBICENTS MEDIA SERVER VERSIONS -->
-		<mms.version>1.0.0.BETA4</mms.version>
+		<mms.version>1.0.0.CR1</mms.version>
 	</properties>
 
 	<dependencies>
