moving MMS version to CR2
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3373 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -26,11 +26,12 @@
 		<module>simple-sip-servlet-distributable</module>
 		<module>speed-dial</module>
 		<module>uac-register</module>
+		<module>conference-demo</module>
 	</modules>
 
 	<properties>
 		<!-- MOBICENTS MEDIA SERVER VERSIONS -->
-		<mms.version>1.0.0.CR1</mms.version>
+		<mms.version>1.0.0.CR2</mms.version>
 	</properties>
 
 	<dependencies>
