--- a/sip-servlets-examples/conference-demo/pom.xml
+++ b/sip-servlets-examples/conference-demo/pom.xml
@@ -128,6 +128,13 @@
 			<version>1.1.6</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>annotations-api</artifactId>
+			<version>6.0.14</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
