--- a/jopr-plugin/pom.xml
+++ b/jopr-plugin/pom.xml
@@ -13,6 +13,13 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.14</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<!-- logging dependency -->
 		<dependency>
 			<groupId>commons-logging</groupId>
@@ -58,15 +65,15 @@
 		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>persistence-api</artifactId>
-			<version>1.0</version>			
+			<version>1.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>persistence-api</artifactId>
-			<version>1.0</version>			
+			<version>1.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-annotations</artifactId>
