Adding metrics about SipManager : number of active sip sessions and sip application sessions.
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3408 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/jopr-plugin/pom.xml
+++ b/jopr-plugin/pom.xml
@@ -35,8 +35,33 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.jboss.on</groupId>
+		   	<artifactId>jopr-jboss-as-plugin</artifactId>
+		   	<version>2.2.0-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.on</groupId>
+		   	<artifactId>jopr-tomcat-plugin</artifactId>
+		   	<version>2.2.0-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jetbrains</groupId>
+		   	<artifactId>annotations</artifactId>
+		   	<version>7.0.2</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.rhq</groupId>
 			<artifactId>rhq-core-plugin-api</artifactId>
+			<version>1.2.0-SNAPSHOT</version>
+			<scope>provided</scope> <!-- by PC -->
+		</dependency>
+		
+		<dependency>
+			<groupId>org.rhq</groupId>
+			<artifactId>rhq-core-native-system</artifactId>
 			<version>1.2.0-SNAPSHOT</version>
 			<scope>provided</scope> <!-- by PC -->
 		</dependency>
