downgrading to jsip ri 1.2.85
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3476 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 	<properties>
 		<!-- MOBICENTS TOOL VERSIONS -->
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.BETA2</mobicents.tools.mavenplugin.eclipse.version>
-		<jain-sip-ri.version>1.2.86</jain-sip-ri.version>
+		<!--jain-sip-ri.version>1.2.86</jain-sip-ri.version-->
 		<jboss.version>4.2.3.GA</jboss.version>
 	</properties>
 	
