--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -16,13 +16,20 @@
 	<property name="gwt.version" value="1.4.62" />
 	<property name="gwt.download.url" value="http://google-web-toolkit.googlecode.com/files/gwt-linux-${gwt.version}.tar.gz" />
 	
+	<property name="embjopr.version" value="1.0.0.GA" />
+	<property name="embjopr.download.url" value="http://downloads.sourceforge.net/rhq/embedded-jopr-${embjopr.version}.zip" />
+	
 	<property name="tomcat.distro.zip.path" value="${base.path}/apache-tomcat-${tomcat.version}.zip" />
 	<property name="jboss.distro.zip.path" value="${base.path}/jboss-${jboss.version}.zip" />
 	<property name="gwt.distro.zip.path" value="${base.path}/gwt-linux-${gwt.version}.tar.gz" />
+	<property name="embjopr.distro.zip.path" value="${base.path}/embjopr-${embjopr.version}.zip" />
 	
 	<property name="jboss.home" value="${release.path}/jboss-${jboss.version}" />
 	<property name="tomcat.home" value="${release.path}/apache-tomcat-${tomcat.version}" />
 	<property name="gwt.home" value="${release.path}/gwt-linux-${gwt.version}" />
+	<property name="embjopr.war" value="embedded-jopr.war" />
+	<property name="embjopr.home" value="${release.path}/${embjopr.war}" />
+	<property name="embjopr.home.contents" value="${release.path}/embedded-jopr.war-contents" />
 	
 	<condition property="mvn.executable" value="${sys.M2_HOME}\bin\mvn.bat" else="mvn">
 		<os family="windows"/>
@@ -69,7 +76,7 @@
 	
 	<!-- JBoss version -->
 
-	<target name="release-jboss" depends="extract-jboss">
+	<target name="release-jboss" depends="extract-jboss,extract-embjopr">
 		<for delimiter="," param="jboss.config" list="${mss.release.configurations}">
 			<sequential>
 				<ant dir="${base.path}" antfile="build.xml" target="release-jboss-node">
@@ -111,6 +118,7 @@
 		</antcall>
 		
 		<antcall target="build-mobicents-media-server" />
+		<antcall target="build-mobicents-jopr-plugin" />
 		
 		<condition property="ha.capable">
 			<or>
@@ -176,7 +184,7 @@
 		</exec>
 	</target>
 	
-	<!-- Buil dependencies-->
+	<!-- Build dependencies-->
 	
 	<target name="build-mobicents-media-server" depends="get-deps">
 		<echo>Building Mobicents Media Server</echo>
@@ -195,6 +203,20 @@
 		</copy>
 		<copy file="${base.path}/target/dependencies/sip-balancer/src/test/resources/lb-configuration.properties"
 			tofile="${jboss.home}/sip-balancer/lb-configuration.properties" />
+	</target>
+	
+	<target name="build-mobicents-jopr-plugin" depends="get-deps">
+		<echo>Building Mobicents Jopr Plugin</echo>
+		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/../../jopr-plugin">
+			<arg line="clean install" />
+		</exec>
+		<copy todir="${embjopr.home.contents}/plugins/">
+			<fileset dir="${base.path}/../../jopr-plugin/target/" includes="jopr-mobicents-sip-servlets-plugin-*.jar" />
+		</copy>
+		<mkdir dir="${jboss.home}/server/default/deploy/${embjopr.war}"/>
+		<copy todir="${jboss.home}/server/default/deploy/${embjopr.war}">
+			<fileset dir="${embjopr.home.contents}" includes="**/*" />
+		</copy>
 	</target>
 	
 	<!-- zip source project that can be used to build release -->
@@ -315,6 +337,18 @@
 	<target name="extract-gwt" depends="get-gwt">
 		<delete dir="${gwt.home}" failonerror="true" />
 		<untar compression="gzip" src="${gwt.distro.zip.path}" dest="${gwt.home}/.." />
+	</target>
+	
+	<target name="get-embjopr" unless="got.jopr">
+		<echo>Downloading Embedded Jopr</echo>
+		<get dest="${embjopr.distro.zip.path}" src="${embjopr.download.url}"/>
+	</target>
+		
+	<target name="extract-embjopr" depends="get-embjopr">
+		<delete dir="${embjopr.home}" failonerror="true" />
+		<unzip src="${embjopr.distro.zip.path}" dest="${embjopr.home}/.." />
+		<mkdir dir="${embjopr.home.contents}"/>
+		<unjar src="${embjopr.home}" dest="${embjopr.home.contents}" />
 	</target>
 	
 </project>
