--- a/jopr-plugin/pom.xml
+++ b/jopr-plugin/pom.xml
@@ -3,6 +3,11 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+        <artifactId>mobicents</artifactId>
+        <groupId>org.mobicents</groupId>
+        <version>6</version>
+    </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>jopr-mobicents-sip-servlets-plugin</artifactId>
 	<version>1.0-SNAPSHOT</version>
