--- a/sip-servlets-test-suite/sipp-scenarios/clustering/lb-logging.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/clustering/lb-logging.properties
@@ -1,13 +1,15 @@
-handlers = java.util.logging.ConsoleHandler
-#handlers = java.util.logging.ConsoleHandler, java.util.logging.FileHandler
+#handlers = java.util.logging.ConsoleHandler
+handlers = java.util.logging.ConsoleHandler, java.util.logging.FileHandler
 ############################################################
 # Handler specific properties.
 # Describes specific configuration info for Handlers.
 ############################################################
-java.util.logging.ConsoleHandler.level=INFO
+.level = ALL
+
+#java.util.logging.ConsoleHandler.level=ALL
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 
-java.util.logging.FileHandler.level=FINEST
+#java.util.logging.FileHandler.level=ALL
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.FileHandler.pattern=./logs/load-balancer-%u.log
 
