Check in the new mavenzied mgmt console
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3518 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
 		<module>sip-servlets-spec</module>
 		<module>sip-servlets-impl</module>
 		<module>sip-servlets-application-router</module>
+		<module>sip-servlets-management</module>
 	</modules>
 	
 	<properties>
