try to fix the hudson mss release job
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3529 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -153,11 +153,11 @@
 	<target name="deploy-mgmnt" depends="extract-gwt">
 		<property name="management.home" location="${base.path}/../../sip-servlets-management/"/>
 		
-		<ant dir="${management.home}" antfile="build.xml" target="war">
+		<!--ant dir="${management.home}" antfile="build.xml" target="war">
 			<property name="system.GWT_HOME" value="${gwt.home}"/>
-		</ant>
+		</ant-->		
 		
-		<copy file="${management.home}/build/tmp/sip-servlets-management.war" tofile="${management.deploy.folder}/sip-servlets-management.war"/>
+		<copy file="${management.home}/target/sip-servlets-management-${mss.release.version}.war" tofile="${management.deploy.folder}/sip-servlets-management.war"/>
 	</target>
 	
 	<!-- Get dependencies -->
