Reuse jopr zip once downloaded
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3535 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -317,12 +317,13 @@
 		<delete dir="${tomcat.home}" failonerror="true" />
 		<unzip src="${tomcat.distro.zip.path}" dest="${tomcat.home}/.." />
 	</target>
-		
+	
+	<available file="${embjopr.distro.zip.path}" property="got.jopr" />
 	<target name="get-embjopr" unless="got.jopr">
 		<echo>Downloading Embedded Jopr</echo>
 		<get dest="${embjopr.distro.zip.path}" src="${embjopr.download.url}"/>
 	</target>
-		
+	
 	<target name="extract-embjopr" depends="get-embjopr">
 		<delete dir="${embjopr.home}" failonerror="true" />
 		<unzip src="${embjopr.distro.zip.path}" dest="${embjopr.home}/.." />
