Disabling building and embedding of jopr plugin until the jopr plugin maven dependencies can be resolved
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3553 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -113,7 +113,7 @@
 		</antcall>
 		
 		<antcall target="build-mobicents-media-server" />
-		<antcall target="build-mobicents-jopr-plugin" />
+		<!--antcall target="build-mobicents-jopr-plugin" /-->
 		
 		<condition property="ha.capable">
 			<or>
@@ -317,7 +317,6 @@
 		<delete dir="${tomcat.home}" failonerror="true" />
 		<unzip src="${tomcat.distro.zip.path}" dest="${tomcat.home}/.." />
 	</target>
-	
 	<available file="${embjopr.distro.zip.path}" property="got.jopr" />
 	<target name="get-embjopr" unless="got.jopr">
 		<echo>Downloading Embedded Jopr</echo>
