--- a/jopr-plugin/pom.xml
+++ b/jopr-plugin/pom.xml
@@ -45,6 +45,12 @@
 			</snapshots>
 		</repository>
 	</repositories>
+	
+	<properties>
+		<jopr-version>2.1.2.GA</jopr-version>
+		<rhq-version>1.1.2.GA</rhq-version>
+	</properties>
+	
 	<dependencies>
 
 		<dependency>
@@ -70,14 +76,14 @@
 
 		<dependency>
 			<groupId>org.jboss.on</groupId>
-		   	<artifactId>jopr-jboss-as-plugin</artifactId>
-		   	<version>2.2.0-SNAPSHOT</version>
+		   	<artifactId>rhq-jbossas-plugin</artifactId>
+		   	<version>${jopr-version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.jboss.on</groupId>
-		   	<artifactId>jopr-tomcat-plugin</artifactId>
-		   	<version>2.2.0-SNAPSHOT</version>
+		   	<artifactId>rhq-tomcat-plugin</artifactId>
+		   	<version>${jopr-version}</version>
 		</dependency>
 		
 		<dependency>
@@ -89,35 +95,35 @@
 		<dependency>
 			<groupId>org.rhq</groupId>
 			<artifactId>rhq-core-plugin-api</artifactId>
-			<version>1.2.0-SNAPSHOT</version>
+			<version>${rhq-version}</version>
 			<scope>provided</scope> <!-- by PC -->
 		</dependency>
 		
 		<dependency>
 			<groupId>org.rhq</groupId>
 			<artifactId>rhq-core-native-system</artifactId>
-			<version>1.2.0-SNAPSHOT</version>
+			<version>${rhq-version}</version>
 			<scope>provided</scope> <!-- by PC -->
 		</dependency>
 
 		<dependency>
 			<groupId>org.rhq</groupId>
 			<artifactId>rhq-jmx-plugin</artifactId>
-			<version>1.2.0-SNAPSHOT</version>
+			<version>${rhq-version}</version>
 			<scope>provided</scope> <!-- by PC -->
 		</dependency>
 
 		<dependency>
 			<groupId>org.rhq</groupId>
 			<artifactId>rhq-core-domain</artifactId>
-			<version>1.2.0-SNAPSHOT</version>
+			<version>${rhq-version}</version>
 			<scope>provided</scope> <!-- by PC -->
 		</dependency>
 
 		<dependency>
 			<groupId>org.rhq</groupId>
 			<artifactId>rhq-core-domain</artifactId>
-			<version>1.2.0-SNAPSHOT</version>
+			<version>${rhq-version}</version>
 			<scope>provided</scope> <!-- by PC -->
 		</dependency>
 
