--- a/sip-servlets-examples/conference-demo/.classpath
+++ b/sip-servlets-examples/conference-demo/.classpath
@@ -3,7 +3,8 @@
 	<classpathentry kind="src" path="src/main/webapp"/>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="var" path="M2_REPO/org/mobicents/servers/media/mobicents-media-server-msc-api/1.0.0.CR2-SNAPSHOT/mobicents-media-server-msc-api-1.0.0.CR2-SNAPSHOT.jar" sourcepath="/MMS_SRC"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/servers/media/mobicents-media-server-constants/1.0.0.CR3-SNAPSHOT/mobicents-media-server-constants-1.0.0.CR3-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/mobicents/servers/media/mobicents-media-server-msc-api/1.0.0.CR3-SNAPSHOT/mobicents-media-server-msc-api-1.0.0.CR3-SNAPSHOT.jar"/>
 	<classpathentry kind="var" path="M2_REPO/org/mobicents/servlet/sip/sip-servlets-spec/1.1.7-SNAPSHOT/sip-servlets-spec-1.1.7-SNAPSHOT.jar"/>
 	<classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.0.4/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="var" path="ECLIPSE_HOME"/>
