Upgrading everything to CR3-SNAPSHOT.
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3567 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -31,7 +31,7 @@
 
 	<properties>
 		<!-- MOBICENTS MEDIA SERVER VERSIONS -->
-		<mms.version>1.0.0.CR2</mms.version>
+		<mms.version>1.0.0.CR3-SNAPSHOT</mms.version>
 	</properties>
 
 	<dependencies>
