--- a/sip-servlets-examples/conference-demo/pom.xml
+++ b/sip-servlets-examples/conference-demo/pom.xml
@@ -100,17 +100,17 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-msc-api</artifactId>
-			<version>1.0.0.CR2</version>
+			<version>1.0.0.CR3-SNAPSHOT</version>
 		</dependency>
 		<dependency>		
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-constants</artifactId>
-			<version>1.0.0.CR2</version>
+			<version>1.0.0.CR3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-msc-api-local-impl</artifactId>
-			<version>1.0.0.CR2</version>
+			<version>1.0.0.CR3-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<groupId>javax.sip</groupId>
